import {getTester} from './utils/test.js';

const {test} = getTester(import.meta);

test({
	valid: [
		'.card { :nth-child(2n of :is(&, .local)) {} }',
		'.card { :unknown(/* & */ button) {} }',
	],
	invalid: [
		{
			code: '.card, button, :not(.card) {}',
			errors: [
				{messageId: 'require-selector-scope', column: 8, endColumn: 14},
				{messageId: 'require-selector-scope', column: 16, endColumn: 27},
			],
		},
		{
			code: '.card, button { .local { a {} } }',
			errors: [{messageId: 'require-selector-scope', column: 8, endColumn: 14}],
		},
		{
			code: '.card { :not(&) { .local { a {} } } }',
			errors: [{messageId: 'require-selector-scope', column: 9, endColumn: 16}],
		},
		{
			code: '.card { :nth-child(2n of :is(&, button)) {} }',
			errors: [{messageId: 'require-selector-scope'}],
		},
		{
			code: '.card { :not(&), button {} }',
			errors: [{messageId: 'require-selector-scope', column: 9, endColumn: 16}],
		},
		{
			code: '.card { button {} } body { button {} }',
			errors: [
				{messageId: 'require-selector-scope', column: 21, endColumn: 25},
				{messageId: 'require-selector-scope', column: 28, endColumn: 34},
			],
		},
		{
			code: '@scope { body {} } body { button {} }',
			errors: [
				{messageId: 'require-selector-scope', column: 20, endColumn: 24},
				{messageId: 'require-selector-scope', column: 27, endColumn: 33},
			],
		},
	],
});

test.snapshot({
	valid: [
		'.card {}',
		'#panel button {}',
		'button.card {}',
		'body .card button {}',
		'.card + button {}',
		'.card ~ * {}',
		'button + .card {}',
		'.card, #panel {}',
		String.raw`.\63 ard, #\70 anel {}`,
		':host {}',
		':host(.dark) button {}',
		':host-context(body.dark) button {}',
		String.raw`:\68 ost button {} :\68 ost-context(body) {}`,
		':HOST(.dark) {}',
		':is(.card, #panel) button {}',
		':where(.card, #panel) {}',
		':is(:where(.card, #panel), :host) {}',
		'.card:is(button, a) {}',
		':is(button, a).card {}',
		':is(.card, button):where(#panel, .pane) {}',
		':IS(.card, #panel):WHERE(button, a) {}',
		String.raw`:\69 s(.card, #panel) {}`,
		String.raw`:\77here(:\69s(.card, #panel), .pane) {}`,
		'.card:not(.disabled) {}',
		'.card:has(button) {}',
		':nth-child(2n of .card, #panel) {}',
		':nth-last-child(odd of :where(.card, #panel)) {}',
		':NTH-CHILD(2n of .card) {}',
		String.raw`:\6e th-child(2n of .card, #panel) {}`,
		String.raw`:\6e th-last-child(odd of :\77here(.card, #panel)) {}`,
		'::slotted(.card) {}',
		'::slotted(:is(.card, #panel)) {}',
		'::SLOTTED(.card) {}',
		String.raw`::\73 lotted(:\69s(.card, #panel)) {}`,
		'.card { button {} :not(.disabled) {} :has(button) {} }',
		'.card { & button {} body & {} && {} }',
		'.card { :is(&, .other) {} :where(&, #panel) {} }',
		'.card { :is(.local, button) {} }',
		'.card { > :not(&) {} + button {} ~ * {} }',
		'.card { .local:not(&) {} }',
		'.card { :nth-child(2n of &) {} ::slotted(&) {} }',
		String.raw`.card { :\6e th-child(2n of &) {} ::\73 lotted(&) {} }`,
		'.card { button { a { & > span {} } } }',
		'.card, #panel { button {} }',
		'.card { @media all { button {} } @layer components { a {} } }',
		'@media all { @supports (display: grid) { .card button {} } }',
		'@container (width > 1px) { @layer components { .card {} } }',
		'@scope (.card) { button {} :not(&) {} :has(&) {} }',
		'@scope { * {} }',
		'@scope (body) to (.limit) { :scope {} }',
		'@SCOPE { button {} }',
		String.raw`@\73 cope { button {} }`,
		'@scope { @media all { @supports (display: grid) { button {} } } }',
		'@scope { @scope (body) { button {} } }',
		'@keyframes fade { from { opacity: 0; } 50% { opacity: .5; } to { opacity: 1; } }',
		'@-webkit-keyframes fade { from {} to {} }',
		String.raw`@\4b EYFRAMES fade { from {} }`,
		'.card { @keyframes fade { from {} } }',
		'.card /* keep */ button { color: red !important; }',
		'.card { content: "button, :not(.card)"; background: url("button"); --selector: button; }',
		String.raw`.card { :unknown("&") {} :unknown(\26) {} }`,
		'.card { [data-value="&"] {} }',
		String.raw`.card { :\69s(.local, :unknown("&")) {} }`,
	],
	invalid: [
		'button {}',
		'* {}',
		'[class~="card"] {}',
		':hover {}',
		':root {} :scope {}',
		'::before {}',
		'svg|a {}',
		'.card, button {}',
		':not(.card) {}',
		':has(.card) {}',
		':not(:not(.card)) {}',
		':is(.card, button) {}',
		':where(.card, *) {}',
		':is(:where(.card, button), #panel) {}',
		':is(:not(.card), :has(#panel)) {}',
		String.raw`:\69s(.card, button) {}`,
		String.raw`:\77here(:\69s(.card, button), #panel) {}`,
		':nth-child(2n) {}',
		':nth-child(2n of .card, button) {}',
		':nth-last-child(odd of :not(.card)) {}',
		String.raw`:\6e th-child(2n of .card, button) {}`,
		String.raw`:\6e th-last-child(odd) {}`,
		'::slotted(*) {}',
		'::slotted(:not(.card)) {}',
		'::slotted(:is(.card, button)) {}',
		String.raw`::\73 lotted(:not(.card)) {}`,
		'& {}',
		':is(&, .card) {}',
		'body { & button {} }',
		'.card { :not(&) {} }',
		'.card { :has(&) {} }',
		'.card { :is(&, body) {} }',
		'.card { :where(&, body) {} }',
		'.card { :is(.local, :not(&)) {} }',
		String.raw`.card { :\69s(.local, :\6e ot(&)) {} }`,
		'.card { :nth-child(2n of &, button) {} }',
		String.raw`.card { :\6e th-child(2n of :\6e ot(&)) {} }`,
		String.raw`.card { ::\73 lotted(:\6e ot(&)) {} }`,
		'.card { :unknown(&) {} }',
		'.card { :is(.local, :unknown(&)) {} }',
		'.card, button { a {} .local {} }',
		'.card { :not(&) { button {} } }',
		'@media all { button {} }',
		'@supports (display: grid) { @layer components { button {} } }',
		'@container (width > 1px) { button {} }',
		'@scope (.card) {} button {}',
		'@supports selector(.card) { button {} }',
		'@utility card { & button {} }',
		'@custom-variant dark { & button {} }',
		'button /* .card */ { content: ".card"; --selector: .card; }',
	],
});
